--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ dependencies = [
   "xlrd==2.0.1",                 # TODO: deprecate
   "xlwt==1.3.0",                 # TODO: deprecate
   "xlutils==2.0.0",              # TODO: deprecate
+  "django-reversion==5.1.0",
 ]
 
 [dependency-groups]
