Tweak Kustomize UAT overlay patches to use Spot instances.

--- a/kustomize/overlays/prod/deployment_patch.yaml
+++ b/kustomize/overlays/prod/deployment_patch.yaml
@@ -10,7 +10,7 @@ spec:
           imagePullPolicy: IfNotPresent
           env:
             - name: IBMS_URL
-              value: "https://ibms.dbca.wa.gov.au"
+              value: 'https://ibms.dbca.wa.gov.au'
             - name: DATABASE_URL
               valueFrom:
                 secretKeyRef:
