--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,7 @@ dev = ["ipython>=9.4.0", "ipdb>=0.13.13", "mixer>=7.2.2", "pre-commit>=4.3.0"]
 # Reference: https://docs.astral.sh/ruff/configuration/
 [tool.ruff]
 line-length = 140
+indent-width = 4
 
 [tool.ruff.lint]
 ignore = [
