--- a/kustomize/overlays/uat/deployment_patch.yaml
+++ b/kustomize/overlays/uat/deployment_patch.yaml
@@ -9,7 +9,7 @@ spec:
         - name: ibms
           env:
             - name: IBMS_URL
-              value: "https://ibms-uat.dbca.wa.gov.au"
+              value: 'https://ibms-uat.dbca.wa.gov.au'
             - name: DATABASE_URL
               valueFrom:
                 secretKeyRef:
