--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,15 +8,15 @@ readme = "README.md"
 requires-python = ">=3.13,<4.0"
 dependencies = [
   "django==5.2.7",
-  "psycopg[binary,pool]==3.2.9",
-  "dbca-utils==2.1.3",
+  "psycopg[binary,pool]==3.2.11",
+  "dbca-utils==2.1.4",
   "python-dotenv==1.1.0",
   "dj-database-url==3.0.0",
   "gunicorn==23.0.0",
   "django-extensions==4.1",
   "django-crispy-forms==2.4",
   "crispy-bootstrap5==2025.6",
-  "webtemplate-dbca==1.8.2",
+  "webtemplate-dbca==1.8.3",
   "whitenoise[brotli]==6.11.0",
   "openpyxl==3.1.5",
   "xlrd==2.0.2", # TODO: deprecate
@@ -26,12 +26,7 @@ dependencies = [
 ]
 
 [dependency-groups]
-dev = [
-  "ipdb>=0.13.13",
-  "ipython >= 8.31.0",
-  "mixer >= 7.2.2",
-  "pre-commit >= 4.0.1",
-]
+dev = ["ipython>=9.5.0", "ipdb>=0.13.13", "mixer>=7.2.2", "pre-commit>=4.3.0"]
 
 # Reference: https://docs.astral.sh/ruff/configuration/
 [tool.ruff]
