--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,9 +9,8 @@ requires-python = ">=3.13,<4"
 dependencies = [
   "django==5.2.7",
   "psycopg[binary,pool]==3.2.12",
-  "dbca-utils==2.1.4",
   "python-dotenv==1.2.1",
-  "dj-database-url==3.0.0",
+  "dj-database-url==3.0.1",
   "gunicorn==23.0.0",
   "django-extensions==4.1",
   "django-crispy-forms==2.4",
@@ -23,6 +22,8 @@ dependencies = [
   "xlwt==1.3.0",                  # TODO: deprecate
   "xlutils==2.0.0",               # TODO: deprecate
   "django-reversion==6.0.0",
+  "markupsafe>=3.0.3",
+  "dbca-utils==2.1.5",
 ]
 
 [dependency-groups]
