Harden GitHub workflow runners.

--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -23,6 +23,13 @@ jobs:
         options: --mount type=tmpfs,destination=/var/lib/postgresql/data --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
     steps:
       #----------------------------------------------
+      # Make use of the Step Security Harden Runner workflow to monitor the build process.
+      #----------------------------------------------
+      - name: Harden the GitHub runner
+        uses: step-security/harden-runner@v2.13.1
+        with:
+          egress-policy: audit
+      #----------------------------------------------
       # Checkout repo
       #----------------------------------------------
       - name: Check out repository
