Kustomize: define node affinity, pod anti-affinity, load env vars from secret.

--- a/kustomize/base/deployment.yaml
+++ b/kustomize/base/deployment.yaml
@@ -20,10 +20,6 @@ spec:
           image: ghcr.io/dbca-wa/ibms
           imagePullPolicy: Always
           env:
-            - name: ALLOWED_HOSTS
-              value: '.dbca.wa.gov.au'
-            - name: CSRF_TRUSTED_ORIGINS
-              value: 'https://*.dbca.wa.gov.au'
             - name: TZ
               value: 'Australia/Perth'
           resources:
@@ -80,3 +76,23 @@ spec:
           operator: Equal
           value: arm64
           effect: NoSchedule
+      affinity:
+        # Set a node affinity to favour ARM64-based nodes (preference only).
+        nodeAffinity:
+          preferredDuringSchedulingIgnoredDuringExecution:
+            - weight: 1
+              preference:
+                matchExpressions:
+                  - key: arch
+                    operator: In
+                    values:
+                      - arm64
+        # Set a pod anti-affinity to spread workload pods between nodes (preference only).
+        podAntiAffinity:
+          preferredDuringSchedulingIgnoredDuringExecution:
+            - weight: 1
+              podAffinityTerm:
+                labelSelector:
+                  matchLabels:
+                    app: ibms-deployment
+                topologyKey: kubernetes.io/hostname
