Update Dockerfile: don't create PRs for major semver updates (base image).

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -18,3 +18,7 @@ updates:
       interval: 'weekly'
     commit-message:
       prefix: '[docker] '
+    # Don't create PRs for major SemVer updates, only minor and patch level
+    ignore:
+      - dependency-name: '*'
+        update-types: ['version-update:semver-major']
