--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,16 +18,17 @@ dependencies = [
   "webtemplate-dbca==1.8.3",
   "whitenoise[brotli]==6.11.0",
   "openpyxl==3.1.5",
-  "xlrd==2.0.2", # TODO: deprecate
-  "xlwt==1.3.0", # TODO: deprecate
-  "xlutils==2.0.0", # TODO: deprecate
+  # TODO: deprecate xl* libs
+  "xlrd==2.0.2",
+  "xlwt==1.3.0",
+  "xlutils==2.0.0",
   "django-reversion==6.1.0",
   "markupsafe>=3.0.3",
   "dbca-utils==2.1.5",
 ]
 
 [dependency-groups]
-dev = ["ipython>=9.8.0", "ipdb>=0.13.13", "mixer>=7.2.2", "pre-commit>=4.5.1"]
+dev = ["ipython>=9.9.0", "ipdb>=0.13.13", "mixer>=7.2.2", "pre-commit>=4.5.1"]
 
 # Reference: https://docs.astral.sh/ruff/configuration/
 [tool.ruff]
