--- a/.github/workflows/multi-build.yaml
+++ b/.github/workflows/multi-build.yaml
@@ -80,6 +80,8 @@ jobs:
 
       - name: Checkout
         uses: actions/checkout@v6
+        with:
+          fetch-depth: 0
         # This step checks out the code from the repository.
         # It uses the actions/checkout action to clone the repository into the runner's workspace.
 
