--- a/.github/workflows/multi-build.yaml
+++ b/.github/workflows/multi-build.yaml
@@ -3,6 +3,9 @@
 name: Build multi-architecture Docker image with separate GitHub runners and run vulnerability scan
 
 on:
+  schedule:
+    # 0511 AWST, Mon-Fri
+    - cron: '11 21 * * 1-5'
   push:
     branches:
       - master
